tests/paczka1/fuzzy1/83336445.err
Error in line 5: iyI4 A412 14,23
Error in line 9: zvi A828 38,0
Error in line 13: A828 A644 30,0
Error in line 30: YwUZpWThhu S847 24,4
Error in line 33: iyI4 A828 72,4
Error in line 37: jR0Ec1MQmLL A828 98,19
Error in line 28: jR0Ec1MQmLL S847 67,7
